@@ -1,5 +1,10 @@
 2009-06-08  Martin Leidig  <mleidig@schlund.de>
 
+	Optimized MD5 checksum creation for rendered HTML by using
+	DigestOutputStream.
+
+2009-06-08  Martin Leidig  <mleidig@schlund.de>
+
 	Added RenderOutputListener support (output creation notification, 
 	e.g. can be used for external content analysis). A listener has 
 	to implement the according interface and can be configured using 
